[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadrive-env"
version = "0.1.0"
description = "MetaDrive driving simulator as an ecoframe EnvironmentProtocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "ecoframe>=0.1.0",
    "numpy>=1.24",
    "metadrive-simulator>=0.4.0",
]

[project.optional-dependencies]
runtime = ["ecoframe-runtime>=0.1.0"]  # for EnvironmentLauncher integration
dev     = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/metadrive_env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
